# berkide-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  build.bat  build.sh
.berkide/: config.jsonc
.berkide/events/: events.js
.berkide/keymaps/: default.json  keymap.js
.berkide/locales/: en.json  tr.json
.berkide/plugins/: hello.js
.berkide/runtime/: core.js
.berkide/theme/: darkmode.js  lighttheme.js
BUILDV8ONSYSTEM/: buildV8.sh
BUILDV8ONSYSTEM/gns/: args.mac.arm64.gn  args.win.x64.gn
src/: main.cpp
src/commands/: CommandRegistry.cpp  CommandRegistry.h  CommandRouter.cpp  CommandRouter.h  commands.cpp  commands.h
src/core/: ApiResponse.h  AutoSave.cpp  AutoSave.h  BufferOptions.cpp  BufferOptions.h  CharClassifier.cpp  CharClassifier.h  CompletionEngine.cpp  CompletionEngine.h  Config.cpp  Config.h  DiffEngine.cpp  DiffEngine.h  EditorContext.h  EncodingDetector.cpp  EncodingDetector.h  EventBus.cpp  EventBus.h  Extmark.cpp  Extmark.h  FileWatcher.cpp  FileWatcher.h  FoldManager.cpp  FoldManager.h  HelpSystem.cpp  HelpSystem.h  I18n.cpp  I18n.h  IndentEngine.cpp  IndentEngine.h  KeymapManager.cpp  KeymapManager.h  MacroRecorder.cpp  MacroRecorder.h  MarkManager.cpp  MarkManager.h  MultiCursor.cpp  MultiCursor.h  PieceTable.cpp  PieceTable.h  (+34 more)
src/server/: EndpointRegistry.cpp  EndpointRegistry.h  HttpServer.cpp  HttpServer.h  ServerConfig.h  StateSnapshot.cpp  StateSnapshot.h  WebSocketServer.cpp  WebSocketServer.h
src/system/: Startup.cpp  Startup.h
src/utils/: BerkidePaths.cpp  BerkidePaths.h  Logger.h
src/v8_binding/: AutoSaveBinding.cpp  AutoSaveBinding.h  BindingRegistry.cpp  BindingRegistry.h  BufferBinding.cpp  BufferBinding.h  BufferOptionsBinding.cpp  BufferOptionsBinding.h  BuffersBinding.cpp  BuffersBinding.h  CharClassifierBinding.cpp  CharClassifierBinding.h  CommandsBinding.cpp  CommandsBinding.h  CompletionBinding.cpp  CompletionBinding.h  ConfigBinding.cpp  ConfigBinding.h  CursorBinding.cpp  CursorBinding.h  DiffBinding.cpp  DiffBinding.h  EditorBinding.cpp  EditorBinding.h  EncodingBinding.cpp  EncodingBinding.h  EventBinding.cpp  EventBinding.h  ExtmarkBinding.cpp  ExtmarkBinding.h  FileBinding.cpp  FileBinding.h  FoldBinding.cpp  FoldBinding.h  HelpBinding.cpp  HelpBinding.h  HttpServerBinding.cpp  HttpServerBinding.h  I18nBinding.cpp  I18nBinding.h  (+47 more)
tests/: ws_test.txt
